# Playground-StereoKit-Native

./: .gitignore  .gitmodules  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp
app/src/main/res/values/: strings.xml
